fix: resolve additional contrast theme issues (fix #1291)

--- a/resources/css/components/_alert.css
+++ b/resources/css/components/_alert.css
@@ -1,6 +1,7 @@
 /* This file contains all styles related to the alert component. */
 .alert {
     --btn-borderless-color: var(--alert-color);
+    --btn-borderless-color-focus: var(--alert-color);
 
     background: var(--alert-background);
     border: var(--border) solid var(--alert-border);
@@ -50,6 +51,7 @@
 
 .alert--error {
     --btn-borderless-color: var(--alert-color-error);
+    --btn-borderless-color-focus: var(--alert-color-error);
 
     background: var(--alert-background-error);
     border-color: var(--alert-border-error);
@@ -58,6 +60,7 @@
 
 .alert--warning {
     --btn-borderless-color: var(--alert-color-warning);
+    --btn-borderless-color-focus: var(--alert-color-warning);
 
     background: var(--alert-background-warning);
     border-color: var(--alert-border-warning);
@@ -66,6 +69,7 @@
 
 .alert--success {
     --btn-borderless-color: var(--alert-color-success);
+    --btn-borderless-color-focus: var(--alert-color-success);
 
     background: var(--alert-background-success);
     border-color: var(--alert-border-success);
