--- a/resources/css/themes/_dark.css
+++ b/resources/css/themes/_dark.css
@@ -82,7 +82,7 @@
     --theme-cta-dark-outline: var(--theme-cta-outline);
 
     /* Badge */
-    --theme-badge-background: var(--color-graphite-7);
+    --theme-badge-background: var(--color-graphite-6);
     --theme-badge-color: white;
     --theme-badge-color-alt: black;
 
